# task_agent_denadata

./: .env.example  .gitignore  README.md  compose.yaml  pyproject.toml
docker/: chat.Dockerfile
src/: config.py  log.py  main.py
src/api/: routers.py
src/graph/: agent.py  nodes.py  state.py
src/graph/utils/: __init__.py  data_store.py  tools.py
src/schema/: main_schema.py
tests/: test_chat.py  test_tools.py
