[project]
name = "task-agent-denadata"
version = "0.1.0"
description = "simple AI agent"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]==0.136.3",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.1",
]

[tool.ty.environment]
extra-paths = ["src"]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py313"
fix = true
src = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.1",
    "asgi-lifespan>=2.1.0",
]

[tool.fastapi]
entrypoint = "src.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
